# astra

./: .gitignore  README.md  ToDoList.md  design.md  pyproject.toml  sweep_state.csv  sweep_state.csv.bak  train_raw.csv  val_raw.csv
checkpoints/: sample-model-epoch=09-valid_loss=906.54.ckpt
conf/: config.yaml
conf/architecture/: cpi_pred_conv.yaml  cpi_pred_cross_attn.yaml  cpi_pred_self_attn.yaml  linear.yaml
conf/data/: fold_0.yaml  fold_1.yaml  fold_2.yaml  fold_3.yaml  fold_4.yaml  hpo.yaml  test_100.yaml
conf/experiment_mode/multi_task/: advanced.yaml  base.yaml  basic.yaml  direct.yaml
conf/experiment_mode/single_task/: base.yaml  kcat_only.yaml  ki_only.yaml  km_only.yaml
conf/experiment_mode/uncertainty_multi_task/: advanced.yaml  base.yaml  basic.yaml  direct.yaml
conf/hpo/: cpi_pred_conv.yaml  cpi_pred_cross_attn.yaml  cpi_pred_self_attn.yaml  linear.yaml
conf/hydra/launcher/: balam_slurm.yaml
conf/ligand_featurizer/: morgan.yaml
conf/loss/: masked_mse.yaml  masked_uncertainty_mse.yaml  mse.yaml
conf/loss_weights/: default.yaml
conf/lr_scheduler/: plateau,yaml  plateau.yaml
conf/model/: cpi_pred_conv.yaml  cpi_pred_cross_attn.yaml  cpi_self_attn.yaml  linear.yaml
conf/mtl_optimizer/: base.yaml  cagrad.yaml
conf/mtl_strategy/: manual.yaml  uncertainty.yaml
conf/protein_featurizer/: esm.yaml
conf/recomposition/: advanced.yaml  basic.yaml  none.yaml
conf/target_columns/: all.yaml  kcat_only.yaml  ki_only.yaml  km_only.yaml
configs/experiments/: cpi_conv_model_config.yaml  cpi_cross_attn_model_config.yaml  cpi_self_attn_model_config.yaml  dummy_model_config.yaml  linear_model_config.yaml  test_config.yaml
configs/experiments/5folds_conv/: cpi_conv_model_config_fold0.yaml  cpi_conv_model_config_fold1.yaml  cpi_conv_model_config_fold2.yaml  cpi_conv_model_config_fold3.yaml  cpi_conv_model_config_fold4.yaml
configs/experiments/ensemble-five-fold-inference/: base_ensemble_inference_config.yaml
configs/experiments/five-fold-cv/: base_template_config.yaml  sweep_cv.yaml
configs/hpo/: hpo_conv_config.yaml
docs/: design.md  journal.md  notes.md
multirun/2025-08-25/09-44-12/: multirun.yaml
multirun/2025-08-25/09-47-53/: multirun.yaml
multirun/2025-08-25/09-55-38/: multirun.yaml
multirun/2025-08-25/09-56-36/: multirun.yaml
multirun/2025-08-25/09-57-35/: multirun.yaml
multirun/2025-08-26/12-50-54/: multirun.yaml
multirun/2025-08-26/12-51-07/: multirun.yaml
multirun/2025-08-26/12-51-16/: multirun.yaml
multirun/2025-08-26/12-51-30/: multirun.yaml
multirun/2025-08-26/12-51-42/: multirun.yaml
multirun/2025-08-26/12-53-51/: multirun.yaml
multirun/2025-08-26/13-11-03/: multirun.yaml
predictions/fold0_split/CpiPredSelfAttnModel_20250827-115903/: best_model_preds.csv
scripts/analysis/: analyze_overfitting.py  generate_report.py  test.py
scripts/download_data/: combine_cpipred_data.py  download_brenda.py  download_sabiork.py  jsonify_sabiork.py  sabio_rk_data.json  sabio_rk_data1.json  sabio_rk_data2.json  sabio_rk_data3.json  sabio_rk_data4.json  sabiork_entry_ids.txt  test.py  xml_to_df.py
scripts/examples/: dataloader_example.py  evaluate_cv_splits_example.py  evaluate_cv_splits_on_seq_example.py  filter_valid_core_example.py  hpo_split_example.py  hydra_train.sh  mmseqs2_splits_example.py  mmseqs2_splits_w_ratio_HPO_split.py  mmseqs2_splits_w_ratio_example.py  test_all_km.sh  test_heavy_job.sh  test_med_job.sh  training_example.py
scripts/run_experiment/: 5fold_config.py  cache_esm.sh  hpo_agent_manager.sh  hpo_agent_runner.sh  hpo_migrate_campaign.sh  quick_test.sh  run_sweep.py  run_sweep_cross_attn.py  run_sweep_linear.py  run_sweep_self_attn.py  seed_sweep.py
scripts/run_experiment/five-fold-cv/: make_sweep.py  (+7 more)
src/astra/: __init__.py  constants.py  main.py
tests/: test_constants.py  test_sabiork_api.py
(+289 files in other folders)
